Añadir cambios de frontend y backend